recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:8: error: not found: value avancer
	avancer(100)
        ^FourSquare:10: error: not found: value avancer
	avancer(100)
        ^FourSquare:12: error: not found: value avancer
	avancer(100)
        ^FourSquare:14: error: not found: value avancer
	avancer(100)
        ^