recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	for (i <- 0 to 4)
		carre()
}

def carre() {
	avancer(100)
	gauche(90)
	avancer(100)
	gauche(90)
	avancer(100)
	gauche(90)
	avancer(100)
}
